[NEW] Added New APIS for fetch [MNT] Updated .config [MNT] Updated middleware

--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@ JWT_SUBJECT=local
 JWT_ISSUER=local
 JWT_AUDIENCE=local
 JWT_SECRET=ODVkODg5M2MtM2RkOC00NjljLWEyOWQtODZjMGFjNjI1YmI0
-EXPIRY=1h
+JWT_EXPIRY=1h
 JWT_SKIP=/users/login,/users/register
 DEFAULT_STORAGE_QUOTA_MB=52428800
 STORAGE=storage
